# f1tenth

./: lane_following.bash  map_1723747861.yaml  map_1723747905.yaml  map_1723748909.yaml  map_1723749543.pgm  map_1723749543.yaml  waypoints_odom.csv
configuration/: .lane_following_config.txt.swp  config.txt  lane_following_config.txt
install/: local_setup.sh  setup.sh
install/ackermann_mux/include/ackermann_mux/: ackermann_mux.hpp  ackermann_mux_diagnostics.hpp  ackermann_mux_diagnostics_status.hpp  params_helpers.hpp  topic_handle.hpp  utils.hpp
install/ackermann_mux/lib/ackermann_mux/: ackermann_mux
install/ackermann_mux/share/ackermann_mux/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/birds_eye_view/lib/birds_eye_view/: start_birds_eye_view.py
install/birds_eye_view/share/birds_eye_view/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/birds_eye_view/share/birds_eye_view/cmake/: birds_eye_viewConfig-version.cmake  birds_eye_viewConfig.cmake
install/birds_eye_view/share/birds_eye_view/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/calibration/lib/calibration/: camera_calibration.py  imu_calibration.py
install/calibration/share/calibration/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/camera/lib/camera/: img_publisher  img_subscriber  simulate_camera.py  start_camera.py  start_recording.py  start_shm_manager.py
install/camera/share/camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/camera_package/lib/camera_package/: camera_subscriber
install/camera_package/share/camera_package/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/camera_publisher/lib/camera_publisher/: camera_publisher
install/camera_publisher/share/camera_publisher/: package.sh
install/camera_sub/lib/camera_sub/: camera_subscriber
install/camera_sub/share/camera_sub/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/camera_subscriber_pkg/lib/camera_subscriber_pkg/: camera_subscriber  camera_subscriber_raw
install/camera_subscriber_pkg/share/camera_subscriber_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/camera_visualizer/share/camera_visualizer/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/csi_camera/lib/csi_camera/: dual_camera  simple_camera
install/csi_camera/share/csi_camera/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cv_bridge/include/cv_bridge/: cv_bridge.h  cv_bridge_export.h  (+1 more)
install/dashboard/lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-window.so.2.5.1
log/: latest_build
src/: map_1724130490.pgm
src/birds_eye_view/: CMakeLists.txt
src/birds_eye_view/birds_eye_view_pkg/: birds_eye_transform.py
src/birds_eye_view/scripts/: start_birds_eye_view.py
src/calibration/: .gitignore  CMakeLists.txt
src/calibration/calibration_pkg/: chessboard_calibration.py
src/calibration/msg/: Coordinate.msg
src/calibration/scripts/: imu_calibration.py
src/camera/: CMakeLists.txt
src/camera/camera_pkg/: camera_manager.py  camera_playback_stream.py  camera_publisher.py  camera_shared_object.py  camera_stream.py  default_camera_devices.py  shm_manager.py
src/camera/scripts/: simulate_camera.py  start_camera.py  start_udp_camera.py
src/camera_package/: package.xml  setup.py
src/camera_publisher/: package.xml  setup.cfg  setup.py
src/camera_subscriber_pkg/: setup.cfg  setup.py
src/camera_subscriber_pkg/camera_subscriber_pkg/: camera_subscriber.py
src/internal_interface/: CMakeLists.txt  package.xml
src/internal_interface/msg/: EncodedImage.msg  LocalizedObject.msg  LookAheadPoint.msg  ManueverDescription.msg  Node.msg  Object.msg  RawBattery.msg  RawGps.msg  RawImu.msg  RealControlInput.msg
src/lane_following/: CMakeLists.txt
src/lane_following/lane_following_pkg/: find_lane_lines.py
src/lane_keeping/: setup.py
src/lane_keeping/lane_keeping/: lane_keeping.py
src/lane_pure_pursuit/: setup.cfg  setup.py
src/object_detect/: setup.cfg  setup.py
src/object_detect/object_detect/: object_detect.py
src/object_detection/: CMakeLists.txt  package.xml
src/object_detection/scripts/: start_object_detection.py
src/particle_filter/maps/: map.pgm  map.yaml  map_1722164022.yaml  map_1722229349.pgm  map_1722229704.yaml  map_1723749546.pgm  map_1723749546.yaml  map_1724130490.yaml
src/pure_pursuit/config/: config.yaml
src/pure_pursuit/racelines/: waypoint.csv  waypoints_odom.csv
src/robot_mover/: package.xml  setup.cfg  setup.py
src/waypoint_generator/src/: waypoint_generator.cpp
(+1032 files in other folders)
