<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>birds_eye_view</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aaltoteam@todo.todo">aaltoteam</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclpy</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- <exec_depend>ros2launch</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <launch>
      <include file="launch/start_camera.launch.py"/>
    </launch> -->
  </export>

  <depend>internal_interface</depend>
  <depend>camera</depend>
</package>
